--- a/moharTest1/app/build.gradle
+++ b/moharTest1/app/build.gradle
@@ -27,6 +27,9 @@ android {
     }
 }
 
+
+
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -35,6 +38,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation files('libs/glide-3.6.0.jar')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
