--- a/moharTest1/settings.gradle
+++ b/moharTest1/settings.gradle
@@ -2,15 +2,20 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         google()
+
         mavenCentral()
+        jcenter()
     }
+
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
+        maven {url 'https://jitpack.io'}
         mavenCentral()
     }
 }
+
 rootProject.name = "moharTest1"
 include ':app'
